[package]
name = "cache_response"
version = "0.2.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt"] }
tempfile = "3.12.0"
uuid = { version = "1.10.0", features = ["v4"] }
